--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -19,8 +19,8 @@
     "1. Define a good use case for fine-tuning\n",
     "2. Setup the development environment\n",
     "3. Create and prepare the dataset\n",
-    "4. Fine-tune the model using `trl` and the `SFTTrainer`\n",
-    "5. Test and evaluate the model using `lighteval`\n",
+    "4. Fine-tune the model using `trl` and the `SFTTrainer` with QLoRA as example\n",
+    "5. Test and evaluate the model using GSM8K\n",
     "6. Deploy the model in to a production environment\n",
     "\n",
     "_Note: This guide is designed for consumer GPUs (24GB+) like the NVIDIA RTX 4090/5090 or A10G, but can be adapted for larger systems._\n",
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# Install Pytorch & other libraries\n",
-    "%pip install \"torch==2.4.1\" tensorboard flash-attn \"liger-kernel==0.4.2\" \"setuptools<71.0.0\" \"deepspeed==0.15.4\" openai\n",
+    "%pip install \"torch==2.4.1\" tensorboard flash-attn \"liger-kernel==0.4.2\" \"setuptools<71.0.0\" \"deepspeed==0.15.4\" openai \"lm-eval[api]==0.4.5\"\n",
     "\n",
     "# Install Hugging Face libraries\n",
     "%pip install  --upgrade \\\n",
@@ -249,7 +249,7 @@
     "gradient_checkpointing: true\n",
     "gradient_checkpointing_kwargs:\n",
     "  use_reentrant: false\n",
-    "output_dir: data/llama-3-1-8b-math-orca-qlora\n",
+    "output_dir: runs/llama-3-1-8b-math-orca-qlora\n",
     "\n",
     "# LoRA arguments\n",
     "use_peft: true\n",
@@ -317,10 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we used LoRA and want to use the adapter as standalone model we can merge the adapter and base model using the following command:\n",
-    "```bash\n",
-    "python scripts/merge_adapter_weights.py --peft_model_id {path_to_model} --output_dir {path_to_save_model} --save_tokenizer True --push_to_hub True --repository_id {repository_id}\n",
-    "```"
+    "When used with LoRA, you might want to use the adapter as standalone model. Therefore we can merge the adapter and base model using the following command:"
    ]
   },
   {
@@ -329,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!"
+    "!python scripts/merge_adapter_weights.py --peft_model_id data/llama-3-1-8b-math-orca-qlora-10k-ep1 --push_to_hub True --repository_id llama-3-1-8b-math-orca-qlora-10k-ep1-merged"
    ]
   },
   {
@@ -339,155 +336,92 @@
    "source": [
     "## 5. Test Model and run Inference\n",
     "\n",
-    "After the training is done we want to evaluate and test our model. We will load different samples from the original dataset and evaluate the model on those samples, using a simple loop and accuracy as our metric. \n",
+    "After the training is done we want to evaluate and test our model. As we trained our model on solving math problems, we will evaluate the model on [GSM8K](https://huggingface.co/datasets/openai/gsm8k) dataset. GSM8K (Grade School Math 8K) is a dataset of 8.5K high quality linguistically diverse grade school math word problems. The dataset was created to support the task of question answering on basic mathematical problems that require multi-step reasoning.\n",
     "\n",
-    "_Note: Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm) blog post._\n",
-    "\n"
+    "Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out:\n",
+    "* [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm).\n",
+    "* [Evaluate LLMs using Evaluation Harness and Hugging Face TGI/vLLM](https://www.philschmid.de/evaluate-llms-with-lm-eval-and-tgi-vllm)\n",
+    "* [LLM Evaluation doesn't need to be complicated](https://www.philschmid.de/llm-evaluation)\n",
+    "* [Evaluating Open LLMs with MixEval: The Closest Benchmark to LMSYS Chatbot Arena](https://www.philschmid.de/evaluate-llm-mixeval)\n",
+    "\n",
+    "We are going to use [Evaluation Harness](https://github.com/EleutherAI/lm-evaluation-harness) an open-source framework to evaluate language models on a wide range of tasks and benchmarks. The frameworks support evaluating models behind OpenAI compatible API endpoints, those can be locally or remotely. This super helpful as we can evaluate our model in the same environment we will use for production. \n",
+    "\n",
+    "\n",
+    "We are going to use [Text Generation Inference (TGI)](https://github.com/huggingface/text-generation-inference) for testing and deploying our model. TGI is a purpose-built solution for deploying and serving Large Language Models (LLMs). TGI enables high-performance text generation using Tensor Parallelism and continous batching. If you are or want to use vLLM you can check the Appendix on how to start the inference server.\n",
+    "\n",
+    "_Note: Make sure that you have enough GPU memory to run the container. Restart kernel to remove all allocated GPU memory from the notebook._ \n",
+    "\n",
+    "We will start the on 1 GPU detached. Meaning we can can continue to use the notebook while the container is running. If you have more GPUs you can change the `--gpus` and `--num-shard` flags to the number of GPUs. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250ec9f6688b786f1e73d0717160fd60bf153dd4f923897969d4e58898cb16ea\n"
+     ]
+    }
+   ],
    "source": [
-    "import torch\n",
-    "from peft import AutoPeftModelForCausalLM\n",
-    "from transformers import AutoTokenizer, pipeline\n",
-    " \n",
-    "peft_model_id = \"data/llama-3-1-8b-math-orca-qlora\"\n",
-    " \n",
-    "# Load Model with PEFT adapter\n",
-    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "  peft_model_id,\n",
-    "  device_map=\"auto\",\n",
-    "  torch_dtype=torch.float16\n",
-    ")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
-    "# load into pipeline\n",
-    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tok = pipe.tokenizer\n",
-    "model = pipe.model\n",
+    "%%bash\n",
     "\n",
-    "question = \"What is 2+2?\"\n",
-    "# Create system prompt\n",
-    "system_message = \"\"\"Solve the given high school math problem by providing a clear explanation of each step leading to the final solution.\n",
+    "num_gpus=4\n",
+    "model_id=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged \n",
     "\n",
-    "Provide a detailed breakdown of your calculations, beginning with an explanation of the problem and describing how you derive each formula, value, or conclusion. Use logical steps that build upon one another, to arrive at the final answer in a systematic manner.\n",
-    "\n",
-    "# Steps\n",
-    "\n",
-    "1. **Understand the Problem**: Restate the given math problem and clearly identify the main question and any important given values.\n",
-    "2. **Set Up**: Identify the key formulas or concepts that could help solve the problem (e.g., algebraic manipulation, geometry formulas, trigonometric identities).\n",
-    "3. **Solve Step-by-Step**: Iteratively progress through each step of the math problem, justifying why each consecutive operation brings you closer to the solution.\n",
-    "4. **Double Check**: If applicable, double check the work for accuracy and sense, and mention potential alternative approaches if any.\n",
-    "5. **Final Answer**: Provide the numerical or algebraic solution clearly, accompanied by appropriate units if relevant.\n",
-    "\n",
-    "# Notes\n",
-    "\n",
-    "- Always clearly define any variable or term used.\n",
-    "- Wherever applicable, include unit conversions or context to explain why each formula or step has been chosen.\n",
-    "- Assume the level of mathematics is suitable for high school, and avoid overly advanced math techniques unless they are common at that level.\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "prompt = tok.apply_chat_template([{\"role\": \"system\", \"content\": system_message}, {\"role\": \"user\", \"content\": question}], tokenize=False, add_generation_prompt=True)\n",
-    "print(prompt)\n",
-    "input_ids = tok(prompt, return_tensors=\"pt\").input_ids.to(\"cuda\")\n",
-    "\n",
-    "output = model.generate(input_ids, max_new_tokens=32, eos_token_id=tok.eos_token_id)\n",
-    "print(tok.decode(output[0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Deploy the LLM for Production\n",
-    "\n",
-    "You can now deploy your model to production. For deploying open LLMs into production we recommend using [Text Generation Inference (TGI)](https://github.com/huggingface/text-generation-inference). TGI is a purpose-built solution for deploying and serving Large Language Models (LLMs). TGI enables high-performance text generation using Tensor Parallelism and continous batching for the most popular open LLMs, including Llama, Mistral, Mixtral, StarCoder, T5 and more. Text Generation Inference is used by companies as IBM, Grammarly, Uber, Deutsche Telekom, and many more. There are several ways to deploy your model, including:\n",
-    "\n",
-    " * [Deploy LLMs with Hugging Face Inference Endpoints](https://huggingface.co/blog/inference-endpoints-llm)\n",
-    " * [Hugging Face LLM Inference Container for Amazon SageMaker](https://huggingface.co/blog/sagemaker-huggingface-llm)\n",
-    "\n",
-    "If you have docker installed you can use the following command to start the inference server. \n",
-    "\n",
-    "_Note: Make sure that you have enough GPU memory to run the container. Restart kernel to remove all allocated GPU memory from the notebook._ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docker run -d --name tgi --gpus all -ti -p 8080:80 \\\n",
-    "%%bash \n",
-    "# model=$PWD/{args.output_dir} # path to model\n",
-    "model=$PWD/data/llama-3-1-8b-math-orca-qlora # path to model\n",
-    "num_shard=1             # number of shards\n",
-    "max_input_length=1024   # max input length\n",
-    "max_total_tokens=2048   # max total tokens\n",
-    "\n",
-    "\n",
-    "docker run --gpus all -ti -p 8080:80 \\\n",
-    "  -e MODEL_ID=/workspace \\\n",
-    "  -e NUM_SHARD=$num_shard \\\n",
-    "  -e MAX_INPUT_LENGTH=$max_input_length \\\n",
-    "  -e MAX_TOTAL_TOKENS=$max_total_tokens \\\n",
+    "docker run --name tgi --gpus ${num_gpus} -d -ti -p 8080:80 --shm-size=2GB \\\n",
     "  -e HF_TOKEN=$(cat ~/.cache/huggingface/token) \\\n",
-    "  -v $model:/workspace \\\n",
-    "  ghcr.io/huggingface/text-generation-inference:2.4.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model=data/llama-3-1-8b-math-orca-qlora # path to model\n",
-    "num_shard=1             # number of shards\n",
-    "max_input_length=1024   # max input length\n",
-    "max_total_tokens=2048   # max total tokens\n",
-    "\n",
-    "docker run --gpus 2 -ti -p 8080:80 -e HF_TOKEN=$(cat ~/.cache/huggingface/token) ghcr.io/huggingface/text-generation-inference:2.4.1 --model-id philschmid/llama-3-1-8b-math-orca-qlora --num-shard 2\n",
-    "\n",
-    "docker run --runtime nvidia --gpus all \\\n",
-    "    -p 8000:8000 \\\n",
-    "    --env \"HUGGING_FACE_HUB_TOKEN=$(cat ~/.cache/huggingface/token)\" \\\n",
-    "    vllm/vllm-openai --model Meta-Llama/Meta-Llama-3.1-8B \\\n",
-    "    --enable-lora --lora-modules  orca=philschmid/llama-3-1-8b-math-orca-qlora \\\n",
-    "    --max-model-len 2048"
+    "  ghcr.io/huggingface/text-generation-inference:3.0.1 \\\n",
+    "  --model-id ${model_id} \\\n",
+    "  --num-shard ${num_gpus}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once your container is running you can send requests using the `openai` or `huggingface_hub` sdk. Here we ll use the `openai` sdk to send a request to our inference server. If you don't have the `openai` sdk installed you can install it using `pip install openai`."
+    "Our container will now start in the background and download the model from Hugging Face Hub. We can check the logs to see the progress with `docker logs -f tgi`.\n",
+    "\n",
+    "Once our container is running we can send requests using the `openai` or `huggingface_hub` sdk. Here we ll use the `openai` sdk to send a request to our inference server. If you don't have the `openai` sdk installed you can install it using `pip install openai`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query:\n",
+      "Natalia sold clips to 48 of her friends in April, and then she sold half as many clips in May. How many clips did Natalia sell altogether in April and May?\n",
+      "Original Answer:\n",
+      "72\n",
+      "Generated Answer:\n",
+      "Let's break down the sales by month:\n",
+      "\n",
+      "April: Natalia sold clips to 48 friends.\n",
+      "May: Natalia sold clips to half of 48 friends, which is 48 / 2 = 24 friends.\n",
+      "\n",
+      "Now, let's add up the clips sold in April and May:\n",
+      "\n",
+      "April: 48 clips\n",
+      "May: 24 clips\n",
+      "\n",
+      "Total clips sold in April and May: 48 + 24 = 72 clips.\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
-    "from datasets import load_dataset\n",
-    "from random import randint\n",
     "\n",
     "# create client \n",
-    "client = OpenAI(base_url=\"http://localhost:8000/v1\",api_key=\"-\")\n",
+    "client = OpenAI(base_url=\"http://localhost:8080/v1\",api_key=\"-\")\n",
     "\n",
     "system_message = \"\"\"Solve the given high school math problem by providing a clear explanation of each step leading to the final solution.\n",
     "\n",
@@ -533,16 +467,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Awesome that looks great! Now we can evaluate our model with the [Evaluation Harness](https://github.com/EleutherAI/lm-evaluation-harness).\n",
+    "\n",
+    "_Note: Make sure to change the model id to your fine-tuned model._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-19:14:36:08,691 INFO     [__main__.py:279] Verbosity set to INFO\n",
+      "2024-12-19:14:36:12,330 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2024-12-19:14:36:12,339 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2024-12-19:14:36:13,698 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
+      "2024-12-19:14:36:13,701 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
+      "2024-12-19:14:36:13,701 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 3, 'tokenized_requests': False}\n",
+      "2024-12-19:14:36:13,701 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
+      "2024-12-19:14:36:13,701 INFO     [api_models.py:111] Using max length 2048 - 1\n",
+      "2024-12-19:14:36:13,701 INFO     [api_models.py:124] Using tokenizer None\n",
+      "2024-12-19:14:36:14,806 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
+      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 115.19it/s]\n",
+      "2024-12-19:14:36:26,278 INFO     [evaluator.py:489] Running generate_until requests\n",
+      "Requesting API: 100%|███████████████████████| 1319/1319 [09:55<00:00,  2.21it/s]\n",
+      "2024-12-19:14:46:30,862 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
+      "local-chat-completions (model=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False), gen_kwargs: (None), limit: None, num_fewshot: None, batch_size: 1\n",
+      "|  Tasks  |Version|     Filter     |n-shot|  Metric   |   |Value |   |Stderr|\n",
+      "|---------|------:|----------------|-----:|-----------|---|-----:|---|-----:|\n",
+      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.5421|±  |0.0137|\n",
+      "|         |       |strict-match    |     8|exact_match|↑  |0.1782|±  |0.0105|\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lm_eval --model local-chat-completions \\\n",
+    "  --tasks gsm8k_cot \\\n",
+    "  --model_args model=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False \\\n",
+    "  --apply_chat_template \\\n",
+    "  --fewshot_as_multiturn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Awesome, Don't forget to stop your container once you are done."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tgi\n",
+      "tgi\n"
+     ]
+    }
+   ],
    "source": [
-    "!docker stop tgi"
+    "!docker stop tgi\n",
+    "!docker rm tgi"
    ]
   },
   {
@@ -559,6 +552,18 @@
     "\n",
     "```bash\n",
     "accelerate launch --config_file configs/accelerate_configs/deepspeed_zero3.yaml --num_processes 8 scripts/run_sft.py --config receipes/llama-3-1-8b-qlora.yaml\n",
+    "```\n",
+    "\n",
+    "## Infernece \n",
+    "\n",
+    "### vLLM\n",
+    "\n",
+    "Note: Replace the model id with your fine-tuned model.\n",
+    "\n",
+    "```bash\n",
+    "docker run --runtime nvidia --gpus all \\\n",
+    "    -p 8000:8000 \\\n",
+    "    vllm/vllm-openai --model philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged \n",
     "```"
    ]
   },
