--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -23,6 +23,15 @@
     "5. Test and evaluate the model using GSM8K\n",
     "6. Deploy the model in to a production environment\n",
     "\n",
+    "**What is Qlora?**\n",
+    "\n",
+    "QLoRA (Quantized Low-Rank Adaptation) enables efficient fine-tuning of LLMs using 4-bit quantization and minimal parameter updates, reducing resource needs but potentially impacting performance due to quantization trade-offs. \n",
+    "\n",
+    "**What is Spectrum?**\n",
+    "\n",
+    "Spectrum is a fine-tuning method that identifies the most informative layers of a LLM using Signal-to-Noise Ratio (SNR) analysis and selectively fine-tunes them, offering performance comparable to full fine-tuning with reduced resource usage, especially in distributed training setups.\n",
+    "\n",
+    "\n",
     "_Note: This guide is designed for consumer GPUs (24GB+) like the NVIDIA RTX 4090/5090 or A10G, but can be adapted for larger systems._\n",
     "\n",
     "## 1. Define a good use case for fine-tuning\n",
@@ -205,7 +214,7 @@
     "\n",
     "> Question: Why don't we use frameworks like [axolotl](https://github.com/axolotl-ai-cloud/axolotl)? \n",
     "\n",
-    "That's a good question! Axolotl is a great framework and I highly recommend it! However, it is always good to know how to do things manually. This will give you a better understanding of the inner workings of the framework and how it can be customized. Especially when you ran into an issue or want to extend the scripts and add new features. Axolotl is used by many open source builders and is well tested.\n",
+    "That's a good question! Axolotl is a great framework and I highly recommend it. It is used by many open source builders and is well tested. However, it is always good to know how to do things manually. This will give you a better understanding of the inner workings of the framework and how it can be customized. Especially when you ran into an issue or want to extend the scripts and add new features. \n",
     "\n",
     "Before we can start our training lets take a look at our [training script](./scripts/run_sft.py). The script is kept very simple and is easy to understand. This should help you understand, customize and extend the script for your own use case. We define `dataclasses` for our arguments. Every argument can then be provided either via the command line or by providing a yaml configuration file. That way we have better type safety and intellisense support.\n",
     "\n",
@@ -280,7 +289,7 @@
     "hub_strategy: every_save\n",
     "```\n",
     "\n",
-    "This config works for single-GPU training and for multi-GPU training with FSDP (see Appendix for full command)."
+    "This config works for single-GPU training and for multi-GPU training with FSDP (see Appendix for full command). If you want to use Spectrum check the [Appendix](Appendix) for more information."
    ]
   },
   {
@@ -356,17 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "250ec9f6688b786f1e73d0717160fd60bf153dd4f923897969d4e58898cb16ea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
@@ -391,32 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query:\n",
-      "Natalia sold clips to 48 of her friends in April, and then she sold half as many clips in May. How many clips did Natalia sell altogether in April and May?\n",
-      "Original Answer:\n",
-      "72\n",
-      "Generated Answer:\n",
-      "Let's break down the sales by month:\n",
-      "\n",
-      "April: Natalia sold clips to 48 friends.\n",
-      "May: Natalia sold clips to half of 48 friends, which is 48 / 2 = 24 friends.\n",
-      "\n",
-      "Now, let's add up the clips sold in April and May:\n",
-      "\n",
-      "April: 48 clips\n",
-      "May: 24 clips\n",
-      "\n",
-      "Total clips sold in April and May: 48 + 24 = 72 clips.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "\n",
@@ -474,36 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-12-19:14:36:08,691 INFO     [__main__.py:279] Verbosity set to INFO\n",
-      "2024-12-19:14:36:12,330 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2024-12-19:14:36:12,339 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
-      "2024-12-19:14:36:13,698 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
-      "2024-12-19:14:36:13,701 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
-      "2024-12-19:14:36:13,701 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 3, 'tokenized_requests': False}\n",
-      "2024-12-19:14:36:13,701 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
-      "2024-12-19:14:36:13,701 INFO     [api_models.py:111] Using max length 2048 - 1\n",
-      "2024-12-19:14:36:13,701 INFO     [api_models.py:124] Using tokenizer None\n",
-      "2024-12-19:14:36:14,806 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
-      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 115.19it/s]\n",
-      "2024-12-19:14:36:26,278 INFO     [evaluator.py:489] Running generate_until requests\n",
-      "Requesting API: 100%|███████████████████████| 1319/1319 [09:55<00:00,  2.21it/s]\n",
-      "2024-12-19:14:46:30,862 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
-      "local-chat-completions (model=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False), gen_kwargs: (None), limit: None, num_fewshot: None, batch_size: 1\n",
-      "|  Tasks  |Version|     Filter     |n-shot|  Metric   |   |Value |   |Stderr|\n",
-      "|---------|------:|----------------|-----:|-----------|---|-----:|---|-----:|\n",
-      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.5421|±  |0.0137|\n",
-      "|         |       |strict-match    |     8|exact_match|↑  |0.1782|±  |0.0105|\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!lm_eval --model local-chat-completions \\\n",
     "  --tasks gsm8k_cot \\\n",
@@ -516,23 +467,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome, Don't forget to stop your container once you are done."
+    "Wow, 54% accuracy with only using 10k samples is pretty good! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tgi\n",
-      "tgi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker stop tgi\n",
     "!docker rm tgi"
@@ -564,6 +506,39 @@
     "docker run --runtime nvidia --gpus all \\\n",
     "    -p 8000:8000 \\\n",
     "    vllm/vllm-openai --model philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged \n",
+    "```\n",
+    "\n",
+    "## Spectrum \n",
+    "\n",
+    "Spectrum uses Signal-to-Noise Ratio (SNR) analysis to select the most useful layers for fine-tuning. It provides scripts and pre-run scanned for different models. If your model isn't scanned it will prompt you for the batch size to use for scanning. Batch size of 4 for 70b models requires 8xH100. But popular models like Llama 3.1 8B are already scanned. You can find the scanned models [here](https://github.com/cognitivecomputations/spectrum/tree/main/model_snr_results).\n",
+    "\n",
+    "The script will generate a yaml configuration file in the `model_snr_results` with the name of the model and the top-percent, e.g. for `meta-llama/Llama-3.1-8B` and `30` it will generate it at `snr_results_meta-llama-Meta-Llama-3.1-8B_unfrozenparameters_30percent.yaml`.\n",
+    "\n",
+    "- `--model-name`: Specify the local model path or the Hugging Face repository.\n",
+    "- `--top-percent`: Specify the top percentage of SNR layers you want to retrieve.\n",
+    "\n",
+    "```bash\n",
+    "# clone spectrum\n",
+    "git clone https://github.com/cognitivecomputations/spectrum.git\n",
+    "cd spectrum\n",
+    "# generate yaml configuration\n",
+    "python3 spectrum.py --model-name meta-llama/Meta-Llama-3.1-8B --top-percent 30\n",
+    "# Top 30% SNR layers saved to snr_results_meta-llama-Meta-Llama-3.1-8B_unfrozenparameters_30percent.yaml\n",
+    "cd ..\n",
+    "```\n",
+    "\n",
+    "After the yaml configuration is generated we can use it to fine-tune our model. We need to define the yaml configuration file in our train config yaml file and provide the path to the yaml file as `spectrum_config_path`. Take a look at [receipes/llama-3-1-8b-spectrum.yaml](./receipes/llama-3-1-8b-spectrum.yaml) for an example.\n",
+    "\n",
+    "Then we can start the training with the following command for single GPU training:\n",
+    "\n",
+    "```bash\n",
+    "python scripts/run_sft.py --config receipes/llama-3-1-8b-spectrum.yaml\n",
+    "```\n",
+    "\n",
+    "For multi-GPU training with FSDP and Deepspeed you can use the following command:\n",
+    "\n",
+    "```bash\n",
+    "accelerate launch --config_file configs/accelerate_configs/deepspeed_zero3.yaml --num_processes 8 scripts/run_sft.py --config receipes/llama-3-1-8b-spectrum.yaml\n",
     "```"
    ]
   },
