--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -11,25 +11,25 @@
     "\n",
     "LLMs can now handle many tasks out-of-the-box through prompting, including chatbots, question answering, and summarization. However, for specialized applications requiring high accuracy or domain expertise, fine-tuning remains a powerful approach to achieve higher quality results than prompting alone, reduce costs by training smaller, more efficient models, and ensure reliability and consistency for specific use cases.\n",
     "\n",
-    "Contrary to last years guide [How to Fine-Tune LLMs in 2024 with Hugging Face](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl) this guide focuses more on optimization, distributed training and being more customizable. This means support for different PEFT methods from Full-Finetuning to QLoRA and Spectrum, optimizations for faster and more efficient training, with Flash Attention or Tiger Kernels and how to scale training to multiple GPUs using DeepSpeed. \n",
+    "Contrary to last years guide [How to Fine-Tune LLMs in 2024 with Hugging Face](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl) this guide focuses more on optimization, distributed training and being more customizable. This means support for different PEFT methods from Full-Finetuning to QLoRA and Spectrum, optimizations for faster and more efficient training, with [Flash Attention](https://github.com/Dao-AILab/flash-attention) or [Liger Kernels](https://github.com/linkedin/Liger-Kernel) and how to scale training to multiple GPUs using DeepSpeed. \n",
     "\n",
     "This guide is created using a script rather than notebook. If you are compeltely new to fine-tuning LLMs, I recommend you to start with the [How to Fine-Tune LLMs in 2024 with Hugging Face](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl) guide and then come back to this guide. \n",
     "\n",
     "You will learn how to:\n",
-    "1. Define a good use case for fine-tuning\n",
-    "2. Setup the development environment\n",
-    "3. Create and prepare the dataset\n",
-    "4. Fine-tune the model using `trl` and the `SFTTrainer` with QLoRA as example\n",
-    "5. Test and evaluate the model using GSM8K\n",
-    "6. Deploy the model in to a production environment\n",
+    "1. [Define a good use case for fine-tuning](#1-define-a-good-use-case-for-fine-tuning)\n",
+    "2. [Setup the development environment](#2-setup-the-development-environment)\n",
+    "3. [Create and prepare the dataset](#3-create-and-prepare-the-dataset)\n",
+    "4. [Fine-tune the model using `trl` and the `SFTTrainer` with QLoRA as example](#4-fine-tune-the-model-using-trl-and-the-sfttrainer-with-qlora)\n",
+    "5. [Test and evaluate the model using GSM8K](#5-test-model-and-run-inference)\n",
+    "6. [Deploy the model in to a production environment](#6-deploy-the-model-in-to-a-production-environment)\n",
     "\n",
     "**What is Qlora?**\n",
     "\n",
-    "QLoRA (Quantized Low-Rank Adaptation) enables efficient fine-tuning of LLMs using 4-bit quantization and minimal parameter updates, reducing resource needs but potentially impacting performance due to quantization trade-offs. \n",
+    "[QLoRA (Quantized Low-Rank Adaptation)](https://huggingface.co/papers/2305.14314) enables efficient fine-tuning of LLMs using 4-bit quantization and minimal parameter updates, reducing resource needs but potentially impacting performance due to quantization trade-offs. \n",
     "\n",
     "**What is Spectrum?**\n",
     "\n",
-    "Spectrum is a fine-tuning method that identifies the most informative layers of a LLM using Signal-to-Noise Ratio (SNR) analysis and selectively fine-tunes them, offering performance comparable to full fine-tuning with reduced resource usage, especially in distributed training setups.\n",
+    "[Spectrum](https://huggingface.co/papers/2406.06623) is a fine-tuning method that identifies the most informative layers of a LLM using Signal-to-Noise Ratio (SNR) analysis and selectively fine-tunes them, offering performance comparable to full fine-tuning with reduced resource usage, especially in distributed training setups.\n",
     "\n",
     "\n",
     "_Note: This guide is designed for consumer GPUs (24GB+) like the NVIDIA RTX 4090/5090 or A10G, but can be adapted for larger systems._\n",
@@ -122,14 +122,16 @@
     "\n",
     "```json\n",
     "// Conversation format\n",
-    "{\"messages\": [\n",
-    "    {\"role\": \"system\", \"content\": \"You are...\"},\n",
-    "    {\"role\": \"user\", \"content\": \"...\"},\n",
-    "    {\"role\": \"assistant\", \"content\": \"...\"}\n",
-    "]}\n",
-    "\n",
-    "// Instruction format \n",
+    "{\n",
+    "    \"messages\": [\n",
+    "        {\"role\": \"system\", \"content\": \"You are...\"},\n",
+    "        {\"role\": \"user\", \"content\": \"...\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"...\"},\n",
+    "    ]\n",
+    "}\n",
+    "// Instruction format\n",
     "{\"prompt\": \"<prompt text>\", \"completion\": \"<ideal generated text>\"}\n",
+    "\n",
     "```\n",
     "\n",
     "_Note: If you are interested in a guide on how to create high-quality datasets, let me know._"
@@ -200,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Fine-tune LLM using `trl` and the `SFTTrainer` \n",
+    "## 4. Fine-tune the model using `trl` and the `SFTTrainer` with QLoRA\n",
     "\n",
     "We are now ready to fine-tune our model. We will use the [SFTTrainer](https://huggingface.co/docs/trl/sft_trainer) from `trl` to fine-tune our model. The `SFTTrainer` makes it straightfoward to supervise fine-tune open LLMs. The `SFTTrainer` is a subclass of the `Trainer` from the `transformers` library and supports all the same features, including logging, evaluation, and checkpointing, but adds additiional quality of life features, including:\n",
     "* Dataset formatting, including conversational and instruction format\n",
@@ -214,7 +216,7 @@
     "\n",
     "> Question: Why don't we use frameworks like [axolotl](https://github.com/axolotl-ai-cloud/axolotl)? \n",
     "\n",
-    "That's a good question! Axolotl is a great framework and I highly recommend it. It is used by many open source builders and is well tested. However, it is always good to know how to do things manually. This will give you a better understanding of the inner workings of the framework and how it can be customized. Especially when you ran into an issue or want to extend the scripts and add new features. \n",
+    "That's a great question! Axolotl is a fantastic framework, it is used by many open source builders and is well tested. However, it is good to know how to do things manually. This will give you a better understanding of the inner workings and how it can be customized. Especially when you ran into an issue or want to extend the scripts and add new features. \n",
     "\n",
     "Before we can start our training lets take a look at our [training script](./scripts/run_sft.py). The script is kept very simple and is easy to understand. This should help you understand, customize and extend the script for your own use case. We define `dataclasses` for our arguments. Every argument can then be provided either via the command line or by providing a yaml configuration file. That way we have better type safety and intellisense support.\n",
     "\n",
@@ -228,8 +230,8 @@
     "# ....\n",
     "```\n",
     "\n",
-    "That way we can customize behavior for different training methods and use them in our script with `script_args.method`. The training script is separated by `#######` blocks that separate the different parts of the script. The main training function: \n",
-    "1. Logs all parameters\n",
+    "We can customize behavior for different training methods and use them in our script with `script_args`. The training script is separated by `#######` blocks for the different parts of the script. The main training function: \n",
+    "1. Logs all hyperperparameters\n",
     "2. Loads the dataset from Hugging Face Hub or local disk\n",
     "3. Loads the tokenizer and model with our training strategy (e.g. Q-LoRA, Spectrum)\n",
     "4. Initializes the `SFTTrainer`\n",
@@ -248,17 +250,12 @@
     "use_liger: true\n",
     "bf16: true\n",
     "tf32: true\n",
+    "output_dir: runs/llama-3-1-8b-math-orca-qlora-10k-ep1\n",
     "\n",
     "# Dataset arguments\n",
     "dataset_id_or_path: train_dataset.json\n",
     "max_seq_length: 1024\n",
     "packing: true\n",
-    "per_device_train_batch_size: 16\n",
-    "gradient_accumulation_steps: 4\n",
-    "gradient_checkpointing: true\n",
-    "gradient_checkpointing_kwargs:\n",
-    "  use_reentrant: false\n",
-    "output_dir: runs/llama-3-1-8b-math-orca-qlora\n",
     "\n",
     "# LoRA arguments\n",
     "use_peft: true\n",
@@ -271,6 +268,11 @@
     "\n",
     "# Training arguments\n",
     "num_train_epochs: 1\n",
+    "per_device_train_batch_size: 8\n",
+    "gradient_accumulation_steps: 2\n",
+    "gradient_checkpointing: true\n",
+    "gradient_checkpointing_kwargs:\n",
+    "  use_reentrant: false\n",
     "learning_rate: 2.0e-4 \n",
     "lr_scheduler_type: constant\n",
     "warmup_ratio: 0.1\n",
@@ -284,12 +286,12 @@
     "seed: 42\n",
     "\n",
     "# Hugging Face Hub \n",
-    "push_to_hub: false\n",
-    "hub_model_id: llama-3-1-8b-math-orca-qlora\n",
+    "push_to_hub: true\n",
+    "# hub_model_id: llama-3-1-8b-math-orca-qlora-10k-ep1 # if not defined same as output_dir\n",
     "hub_strategy: every_save\n",
     "```\n",
     "\n",
-    "This config works for single-GPU training and for multi-GPU training with FSDP (see Appendix for full command). If you want to use Spectrum check the [Appendix](Appendix) for more information."
+    "This config works for single-GPU training and for multi-GPU training with DeepSpeed (see Appendix for full command). If you want to use Spectrum check the [Appendix](Appendix) for more information."
    ]
   },
   {
@@ -305,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I ran several experiments with different optimization strategies, including Flash Attention, Liger Kernels, Q-Lora, Spectrum, and Full-Finetuning to compare the time it takes to fine-tune a model. The results are summarized in the following table:\n",
+    "I ran several experiments with different optimization strategies, including Flash Attention, Liger Kernels, Q-Lora, and the Spectrum method to compare the time it takes to fine-tune a model. The results are summarized in the following table:\n",
     " \n",
     "| Model | Train samples | Hardware | Method | train sequence length | per device batch size | gradient accumulation  | packing | Flash Attention | Liger Kernels | est. optimization steps | est. train time |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
@@ -314,19 +316,21 @@
     "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 2 | 4 | ✅ | ✅ | ❌ | 676 | ~220 min |\n",
     "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 4 | 4 | ✅ | ✅ | ✅ | 338 | ~135 min |\n",
     "| Llama-3.1-8B | 10,000 | 4x L4 24GB | Q-LoRA | 1024 | 8 | 2 | ✅ | ✅ | ✅ | 84 | ~33 min |\n",
-    "| Llama-3.1-8B | 10,000 | 8x L4 24GB | Q-LoRA | 1024 | 8 | 2 | ✅ | ✅ | ✅ | 21 | ~18 min |\n",
+    "| Llama-3.1-8B | 10,000 | 8x L4 24GB | Q-LoRA | 1024 | 8 | 2 | ✅ | ✅ | ✅ | 42 | ~18 min |\n",
+    "| Llama-3.1-8B | 10,000 | 8x L4 24GB | Spectrum (30%) | 1024 | 8 | 2 | ✅ | ✅ | ✅ | 42 | ~21 min |\n",
     "\n",
     "\n",
     "**Notes:** \n",
     "- Q-Lora included training the embedding layer and the lm_head, as we use the Llama 3.1 chat template and in the base model the special tokens are not trained.\n",
-    "- For distributed training Deepspeed (0.15.4) with ZeRO3 and Hugging Face Accelerate was used.\n"
+    "- For distributed training Deepspeed (0.15.4) with ZeRO3 and Hugging Face Accelerate was used.\n",
+    "- Spectrum with 30% SNR layers took slightly longer than Q-Lora, but achieves 58% accuracy on GSM8K dataset, which is 4% higher than Q-Lora.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When used with LoRA, you might want to use the adapter as standalone model. Therefore we can merge the adapter and base model using the following command:"
+    "Using Q-LoRA only saves the trained adapter weights. If you want to use the model as standalone model, e.g. for inference you might want to merge the adapter and base model. This can be done using the following command:"
    ]
   },
   {
@@ -335,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python scripts/merge_adapter_weights.py --peft_model_id data/llama-3-1-8b-math-orca-qlora-10k-ep1 --push_to_hub True --repository_id llama-3-1-8b-math-orca-qlora-10k-ep1-merged"
+    "!python scripts/merge_adapter_weights.py --peft_model_id runs/llama-3-1-8b-math-orca-qlora-10k-ep1 --push_to_hub True --repository_id llama-3-1-8b-math-orca-qlora-10k-ep1-merged"
    ]
   },
   {
@@ -371,8 +375,8 @@
    "source": [
     "%%bash\n",
     "\n",
-    "num_gpus=4\n",
-    "model_id=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged \n",
+    "num_gpus=1\n",
+    "model_id=philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 # replace with your model id\n",
     "\n",
     "docker run --name tgi --gpus ${num_gpus} -d -ti -p 8080:80 --shm-size=2GB \\\n",
     "  -e HF_TOKEN=$(cat ~/.cache/huggingface/token) \\\n",
@@ -458,7 +462,7 @@
    "source": [
     "!lm_eval --model local-chat-completions \\\n",
     "  --tasks gsm8k_cot \\\n",
-    "  --model_args model=philschmid/llama-3-1-8b-math-orca-qlora-10k-ep1-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False \\\n",
+    "  --model_args model=philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False \\\n",
     "  --apply_chat_template \\\n",
     "  --fewshot_as_multiturn"
    ]
@@ -485,6 +489,8 @@
    "metadata": {},
    "source": [
     "# Appendix \n",
+    "\n",
+    "The Appendix contains additional commands and documentation on how to run distributed training, inference and how to use Spectrum.\n",
     "\n",
     "## Distributed Training\n",
     "\n",
@@ -532,14 +538,24 @@
     "Then we can start the training with the following command for single GPU training:\n",
     "\n",
     "```bash\n",
-    "python scripts/run_sft.py --config receipes/llama-3-1-8b-spectrum.yaml\n",
+    "CUDA_VISIBLE_DEVICES=0 python scripts/run_sft.py --config receipes/llama-3-1-8b-spectrum.yaml\n",
     "```\n",
+    "\n",
+    "_Note: Spectrum requires a more memory than Q-Lora. According to the paper ~30-50GB on a single GPU._\n",
+    "\n",
     "\n",
     "For multi-GPU training with FSDP and Deepspeed you can use the following command:\n",
     "\n",
     "```bash\n",
     "accelerate launch --config_file configs/accelerate_configs/deepspeed_zero3.yaml --num_processes 8 scripts/run_sft.py --config receipes/llama-3-1-8b-spectrum.yaml\n",
-    "```"
+    "```\n",
+    "\n",
+    "_Note: Training on 8x L4 GPUs with Spectrum takes ~21 minutes. Q-Lora on the same config took 18 minutes._\n",
+    "\n",
+    "Results: \n",
+    "- Spectrum model trained for 1 epoch with 30% SNR layers on GSM8K dataset achieved 58% accuracy, which is 4% higher than Q-Lora.\n",
+    "- Spectrum model trained for 3 epochs with 30% SNR layers on GSM8K dataset achieved 60% accuracy.\n",
+    "\n"
    ]
   },
   {
