Fix typo fine-tune-llms-in-2025.ipynb

--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "## 2. Setup development environment\n",
     "\n",
-    "Our first step is to install Hugging Face Libraries and Pyroch, including trl, transformers and datasets. If you haven't heard of trl yet, don't worry. It is a new library on top of transformers and datasets, which makes it easier to fine-tune, rlhf, align open LLMs. \n"
+    "Our first step is to install Hugging Face Libraries and Pytorch, including trl, transformers and datasets. If you haven't heard of trl yet, don't worry. It is a new library on top of transformers and datasets, which makes it easier to fine-tune, rlhf, align open LLMs. \n"
    ]
   },
   {
