--- a/training/rl-with-llms-in-2025-dpo.ipynb
+++ b/training/rl-with-llms-in-2025-dpo.ipynb
@@ -108,7 +108,7 @@
     "I prepared [create_preference_dataset.py](./scripts/dpo/create_preference_dataset.py) script to generate the dataset. The dataset will be saved to the Hugging Face Hub. We are going to generate 4 solutions for each input hoping to have at least one correct solution and one incorrect solution. If we don't have a pair we will skip the input.\n",
     "\n",
     "```python\n",
-    "python scripts/dpo/create_preference_dataset.py --dataset_id philschmid/DMath --sample_size 250 --generation_model_name_or_path philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 --num_solutions 4 --batch_size 8 \n",
+    "python scripts/dpo/create_preference_dataset.py --dataset_id philschmid/DMath --sample_size 5000 --generation_model_name_or_path philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 --num_solutions 4 --batch_size 8 \n",
     "```\n",
     "\n",
     "_Note: You can skip this step and used the generated preference dataset from me [philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates](https://huggingface.co/philschmid/philschmid-llama-3-1-8b-math-orca-spectr-philschmid-DMath-candidates)_"
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python scripts/merge_adapter_weights.py --peft_model_id runs/llama-3-1-8b-math-orca-qlora-10k-ep1 --push_to_hub True --repository_id llama-3-1-8b-math-orca-qlora-10k-ep1-merged"
+    "!python scripts/merge_adapter_weights.py --peft_model_id runs/dpo-llama-3-1-8b-math-ep3 --push_to_hub True --repository_id dpo-llama-3-1-8b-math-ep3-merged"
    ]
   },
   {
@@ -269,20 +269,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55ab6ae17beaf668f7e3043d134eaf2512748985b4d6dee14de59473a4eb9a6a\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "\n",
     "num_gpus=1\n",
-    "model_id=philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1 # replace with your model id\n",
+    "model_id=philschmid/dpo-llama-3-1-8b-math-ep3-merged # replace with your model id\n",
     "\n",
     "docker run --name tgi --gpus ${num_gpus} -d -ti -p 8080:80 --shm-size=2GB \\\n",
     "  -e HF_TOKEN=$(cat ~/.cache/huggingface/token) \\\n",
     "  ghcr.io/huggingface/text-generation-inference:3.0.1 \\\n",
     "  --model-id ${model_id} \\\n",
     "  --num-shard ${num_gpus}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vllm serve philschmid/dpo-llama-3-1-8b-math-ep3-merged --dtype auto \n"
    ]
   },
   {
@@ -296,9 +313,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query:\n",
+      "If you converted $140 to 158760 Korean Won, how much is $1 in Korean Won?\n",
+      "Original Answer:\n",
+      "14\n",
+      "Generated Answer:\n",
+      "To find out how much $1 is in Korean Won, you can divide the total amount of Korean Won you converted by the amount in dollars you started with. \n",
+      "\n",
+      "So, you would divide 158760 Korean Won by $140.\n",
+      "\n",
+      "158760 Korean Won / $140 = 1134 Korean Won per dollar. \n",
+      "\n",
+      "Therefore, $1 is equal to 1134 Korean Won.\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "\n",
@@ -329,62 +365,26 @@
     "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": system_message},\n",
-    "    # {\"role\": \"user\", \"content\": \"Natalia sold clips to 48 of her friends in April, and then she sold half as many clips in May. How many clips did Natalia sell altogether in April and May?\"},\n",
-    "    {\"role\": \"user\", \"content\": \"What is the difference between the largest number and the smallest number that can be made by selecting four from the number magnets 2, 0, 3, 5, and 8 and arranging them in a row to form a four-digit number?\"},\n",
+    "    {\"role\": \"user\", \"content\": \"If you converted $140 to 158760 Korean Won, how much is $1 in Korean Won?\"},\n",
+    "    # {\"role\": \"user\", \"content\": \"The rectangular-shaped cell phone is 9 centimeters (cm) wide and 46 centimeters (cm) in circumference. Find the vertical length of the cell phone?\"},\n",
     "]\n",
-    "expected_answer = \"59\"\n",
+    "expected_answer = \"14\"\n",
     "\n",
     "\n",
     "# Take a random sample from the dataset and remove the last message and send it to the model\n",
-    "for i in range(10):\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"orca\",\n",
-    "        messages=messages,\n",
-    "\t\t\t\tstream=False, # no streaming\n",
-    "\t\t\t\tmax_tokens=1024,\n",
-    "\t\t\t\ttemperature=1.0)\n",
-    "    response = response.choices[0].message.content\n",
-    "    print(filter_string(response))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "ds = load_dataset(\"philschmid/DMath\", split=\"train\")\n",
-    "ds[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json \n",
-    "from datasets import Dataset\n",
     "\n",
-    "with open('train.json', 'r') as f:\n",
-    "  x = json.load(f)\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"orca\",\n",
+    "    messages=messages,\n",
+    "    stream=False, # no streaming\n",
+    "    max_tokens=1024,\n",
+    "    temperature=1.0)\n",
+    "response = response.choices[0].message.content\n",
     "\n",
-    "y = list(x.values())\n",
-    "ds = Dataset.from_list(y)\n",
-    "ds = ds.remove_columns([\"question_ko\",\"answer_ko\",\"solution_abst_ko\",\"solution_code_ko\"])\n",
-    "ds = ds.rename_column(\"question_en\",\"question\")\n",
-    "ds = ds.rename_column(\"answer_en\",\"answer\")\n",
-    "ds = ds.rename_column(\"solution_abst_en\",\"solution_abst\")\n",
-    "ds = ds.rename_column(\"solution_code_en\",\"solution_code\")\n",
-    "ds.push_to_hub(\"philschmid/DMath\")"
+    "# Print results\n",
+    "print(f\"Query:\\n{messages[1]['content']}\")\n",
+    "print(f\"Original Answer:\\n{expected_answer}\")\n",
+    "print(f\"Generated Answer:\\n{response}\")\n"
    ]
   },
   {
@@ -402,9 +402,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!lm_eval \\\n",
+    "  --model vllm \\\n",
+    "  --model_args pretrained=\"philschmid/dpo-llama-3-1-8b-math-ep3-merged\",dtype=auto,gpu_memory_utilization=0.4,add_bos_token=True,max_model_len=4096 \\\n",
+    "  --apply_chat_template \\\n",
+    "  --tasks gsm8k_cot \\\n",
+    "  --batch_size auto\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-22:09:24:12,482 INFO     [__main__.py:279] Verbosity set to INFO\n",
+      "2025-01-22:09:24:18,165 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2025-01-22:09:24:18,181 INFO     [__init__.py:459] The tag 'arc_ca' is already registered as a group, this tag will not be registered. This may affect tasks you want to call.\n",
+      "2025-01-22:09:24:20,526 INFO     [__main__.py:376] Selected Tasks: ['gsm8k_cot']\n",
+      "2025-01-22:09:24:20,534 INFO     [evaluator.py:164] Setting random seed to 0 | Setting numpy seed to 1234 | Setting torch manual seed to 1234 | Setting fewshot manual seed to 1234\n",
+      "2025-01-22:09:24:20,534 INFO     [evaluator.py:201] Initializing local-chat-completions model, with arguments: {'model': 'philschmid/dpo-llama-3-1-8b-math-ep3-merged', 'base_url': 'http://localhost:8080/v1/chat/completions', 'num_concurrent': 8, 'max_retries': 10, 'tokenized_requests': False, 'timeout': 180}\n",
+      "2025-01-22:09:24:20,534 WARNING  [openai_completions.py:106] chat-completions endpoint requires the `--apply_chat_template` flag.\n",
+      "2025-01-22:09:24:20,535 INFO     [api_models.py:111] Using max length 2048 - 1\n",
+      "2025-01-22:09:24:20,535 INFO     [api_models.py:124] Using tokenizer None\n",
+      "2025-01-22:09:24:21,571 INFO     [task.py:415] Building contexts for gsm8k_cot on rank 0...\n",
+      "100%|██████████████████████████████████████| 1319/1319 [00:11<00:00, 111.43it/s]\n",
+      "2025-01-22:09:24:33,428 INFO     [evaluator.py:489] Running generate_until requests\n",
+      "Requesting API: 100%|███████████████████████| 1319/1319 [27:47<00:00,  1.26s/it]\n",
+      "2025-01-22:09:52:27,646 INFO     [evaluation_tracker.py:269] Output path not provided, skipping saving results aggregated\n",
+      "local-chat-completions (model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180), gen_kwargs: (None), limit: None, num_fewshot: None, batch_size: 1\n",
+      "|  Tasks  |Version|     Filter     |n-shot|  Metric   |   |Value |   |Stderr|\n",
+      "|---------|------:|----------------|-----:|-----------|---|-----:|---|-----:|\n",
+      "|gsm8k_cot|      3|flexible-extract|     8|exact_match|↑  |0.6012|±  |0.0135|\n",
+      "|         |       |strict-match    |     8|exact_match|↑  |0.1501|±  |0.0098|\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "!lm_eval --model local-chat-completions \\\n",
     "  --tasks gsm8k_cot \\\n",
-    "  --model_args model=philschmid/llama-3-1-8b-math-orca-spectrum-10k-ep1,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=3,tokenized_requests=False \\\n",
+    "  --model_args model=philschmid/dpo-llama-3-1-8b-math-ep3-merged,base_url=http://localhost:8080/v1/chat/completions,num_concurrent=8,max_retries=10,tokenized_requests=False,timeout=180 \\\n",
     "  --apply_chat_template \\\n",
     "  --fewshot_as_multiturn"
    ]
@@ -413,14 +455,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow, 54% accuracy with only using 10k samples is pretty good! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
+    "Wow, 60% accuracy with only using 10k samples is pretty good! We successfully validated that our model can solve math problems. Now, don't forget to stop your container once you are done."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tgi\n",
+      "tgi\n"
+     ]
+    }
+   ],
    "source": [
     "!docker stop tgi\n",
     "!docker rm tgi"
@@ -448,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4,
   "vscode": {
